Fix friendbtn size on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -768,10 +768,10 @@ html {
     .accountBtn.loggedIn {
         right: 62px;
     }
-    .friendBtn {
+    .friendBtn.friendBtnFixed {
         height: 36px;
     }
-    .friendBtnIcon {
+    .friendBtnIcon.friendBtnIconFixed {
         width: 35px;
         height: 35px;
     }
@@ -786,10 +786,10 @@ html {
     .accountBtn.loggedIn {
         right: 58px;
     }
-    .friendBtn {
+    .friendBtn.friendBtnFixed {
         height: 30px;
     }
-    .friendBtnIcon {
+    .friendBtnIcon.friendBtnIconFixed {
         width: 30px;
         height: 30px;
     }
